# dotacord

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.lock.bak  Cargo.toml  README.md  TODO.md  build.rs  build_output.txt  dotacord.debug.toml  dotacord.release.toml  dotacord.toml  sqlite3  start_seq.ps1
.ai/specs/done/: ai-chat-service.md  query-player-stats-tool.md  register_server_cmdlinearg.md  top-winrate-heroes-tool.md
.ai/specs/idea/: agent_mcp_tools.md  claude_command.md  hero_command_picker.md  hero_nicknames.md  leaderboard_mcp_tools.md  register_server_cmdlinearg.md
.ai/specs/todo/: heroes-database.md  ready-check-command.md  top-winrate-heroes-tool.md
.claude/commands/: prod_start.md  prod_status.md  prod_stop.md
.claude/skills/deploy/: SKILL.md
.claude/skills/deploy/scripts/: deploy.ps1  rollback.ps1
.claude/skills/register-server/: SKILL.md
.github/: copilot-instructions.md
context/: dotacord.md
scripts/: gen_heroes_sql.py  get_hero_data.ps1  get_hero_data.sh  prod_start.ps1  prod_status.ps1  prod_stop.ps1  register-server.ps1  release.sh  setup_database.sh
sql/: create_chat_messages.sql  create_hero_nicknames.sql  create_heroes.sql  create_player_rules.sql  create_tables.sql  dev.sql  hydrate_heroes.sql
src/: config.rs  logging.rs  main.rs
src/ai/: chat.rs  mod.rs  tools.rs
src/api/: api_wrapper.rs  hero_stats_cache.rs  mod.rs  open_dota_api.rs  open_dota_links.rs  reload.rs
src/data/: hero_cache.rs  mod.rs  player_matches_db.rs  player_servers_db.rs  servers_db.rs
src/database/: AGENTS.md  chat_messages_db.rs  command_events_db.rs  database_access.rs  hero_cache.rs  heroes_db.rs  mod.rs  player_matches_db.rs  player_rules_db.rs  player_servers_db.rs  players_db.rs  schedule_events_db.rs  servers_db.rs  types.rs
src/database/entities/: chat_message.rs  command_event.rs  hero.rs  hero_nickname.rs  mod.rs  player.rs  player_match.rs  player_rule.rs  player_server.rs  schedule_event.rs  server.rs
src/discord/: AGENTS.md  discord_helper.rs  flip_command.rs  heroes_command.rs  leaderboard_command.rs  manage_players_command.rs  mention_handler.rs  misc_commands.rs  mod.rs  player_commands.rs  players_command.rs  register_command.rs  register_server.rs  reload_command.rs  server_settings_command.rs  subscription_commands.rs
src/discord/player_commands/: AGENTS.md  add_player.rs  list_players.rs  mod.rs  register_server.rs  remove_player.rs  rename_player.rs
src/leaderboard/: duration.rs  emoji.rs  leaderboard_stats.rs  mod.rs  section.rs  section_formatter.rs  sections.rs  stats_calculator.rs  stats_formatter.rs
src/markdown/: README.md  column.rs  link.rs  markdown_builder.rs  mod.rs  stats_formatter.rs  table.rs  text.rs
src/scheduler/: heartbeat_task.rs  leaderboard_task.rs  mod.rs  reload_task.rs
src/util/: dates.rs  macros.rs  markdown.rs  mod.rs
tasks/: add_heartbeating.md  schedule_interval_db.md  subscribe_reload.md
