[package]
name = "dotacord"
edition = "2021"

[dependencies]
# poise = { path = "../ext/poise", features = ["cache"] }
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "3009d22082cadab93e0f463e9d9868b656cd62bc" }
# poise = { git = "https://github.com/Encryptoid/poise" }
poise = { git = "ssh://git@github-encryptoid/Encryptoid/poise" }
# poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next"}
# poise = { git = "https://github.com/serenity-rs/poise", rev = "17fd1d760ea810ce7f9b1810281a556bea4b340b"}
# serenity = { git = "https://github.com/serenity-rs/serenity", rev = "17fd1d760ea810ce7f9b1810281a556bea4b340b" }
# serenity = { git = "https://github.com/serenity-rs/serenity", branch = "17fd1d760ea810ce7f9b1810281a556bea4b340b" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "sync"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde_json = "1.0.145"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "local-time"] }
tracing = "0.1"
chrono = "0.4.42"
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4", features = ["derive"] }
ureq = "2.12"

[workspace.lints.rust]
unused = "deny"
