[package]
name = "dotacord"
edition = "2021"

[dependencies]
# poise = { path = "../ext/poise", features = ["cache"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "sync"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde_json = "1.0.145"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "local-time"] }
uuid = "1"

chrono = "0.4.42"
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4", features = ["derive"] }
ureq = "2.12"
markdown-tables = "0.1.0"

[workspace.lints.rust]
unused = "deny"
